# AMI-COMPLIANCE

./: .gitignore  .pre-commit-config.yaml  CODE_QUALITY_ISSUES.md  CONFORMITY.md  FIXME.md  README.md  REPORT-FALLBACKS.md  SETUP_CONTRACT.md  module_setup.py  pyproject.toml
CODE_QUALITY_ISSUES.md.meta/automation/default/: scenario.json
SETUP_CONTRACT.md.meta/automation/default/: scenario.json
SPEC-SCHEDULING.md.meta/automation/default/: scenario.json
backend/audit/core/: __init__.py  audit_chain.py  audit_context.py  (+2 more)
compliance/: __init__.py
docs/: AI_COMPLIANCE_MASTER_REQUIREMENTS.md  COMPLIANCE_BACKEND_SPEC.md  COMPLIANCE_GAP_ANALYSIS.md  COMPLIANCE_STANDARDS_CATALOG.md  CURRENT_IMPLEMENTATION_STATUS.md  EXECUTIVE_ACTION_PLAN.md  README.md  SPEC-AUDIT.md  STANDARDS_TO_ACQUIRE.md  SUBMODULE_COMPLIANCE_PLANS.md  feedback-20251101075526-SPEC-AUDIT.md  progress-20251101074728-SPEC-AUDIT.md  progress-20251101075143-SPEC-AUDIT.md  progress-20251101075312-SPEC-AUDIT.md  progress-20251101075526-SPEC-AUDIT.md  progress-20251101092402-SPEC-AUDIT.md
docs/research/: AI_COMPLIANCE_MASTER_REQUIREMENTS.md  COMPLIANCE_BACKEND_SPEC.md  COMPLIANCE_GAP_ANALYSIS.md  COMPLIANCE_STANDARDS_CATALOG.md  CURRENT_IMPLEMENTATION_STATUS.md  EXECUTIVE_ACTION_PLAN.md  ISMS-MATRIX-INTEGRATION-PLAN.md  MATRIX-LOCATION.md  OPENAMI-COMPLIANCE-MAPPING.md  Open AMI Chapters I-IV Peer Review Draft 3.tex  README.md  STANDARDS_TO_ACQUIRE.md
research/: CONFORMITY.md  README.md  REQUIREMENTS.md  requirements.txt
scripts/: ami-audit  download_standards.py
tests/: conftest.py  test_audit_core.py
(+127 files in other folders)
