[project]
name = "ami-compliance"
version = "0.1.0"
description = "Compliance module for AMI orchestrator"
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "AMI Team" } ]

dependencies = [
  "loguru==0.7.3",
  "pydantic==2.11.9",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.15.1",
  "pytest-xdist==3.8.0",
  "ruff==0.13.2",
  "mypy==1.18.2",
  "types-PyYAML==6.0.12.20250915",
]

[project.scripts]
run-tests = "base.scripts.run_tests_minimal:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Ensure the project is installed into the venv and console scripts are available
package = true

# Developer toolchain
dev-dependencies = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.15.1",
  "pytest-xdist==3.8.0",
  "ruff==0.13.2",
  "mypy==1.18.2",
  "types-PyYAML==6.0.12.20250915",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.setuptools.packages.find]
include = ["compliance*"]
